feat(elfeed): Customize workspace name

--- a/config.org
+++ b/config.org
@@ -2195,6 +2195,13 @@ When updating the entries, commit changes to the DB.
     (elfeed-db-save-safe)))
 #+end_src
 
+Set the name of the =RSS= workspace.
+
+#+begin_src emacs-lisp :tangle yes
+(after! elfeed
+  (setq +rss-workspace-name "RSS"))
+#+end_src
+
 Give it an easy keybinding to access it:
 
 #+begin_src emacs-lisp :tangle yes
