--- a/config.org
+++ b/config.org
@@ -1669,39 +1669,30 @@ browser. The following advice takes care of this edge case.
 
 *** calfw
 
-For the =calendar= view, it's useful to be able to see when a task is scheduled.
-
-#+begin_src emacs-lisp :tangle yes
-(after! calfw
-  (defadvice! dan/org-agenda--show-scheduled-in-calfw (fn &rest args)
-    :around #'cfw:org-collect-schedules-period
-    (let ((org-agenda-todo-ignore-scheduled nil))
-      (apply fn args)))
-#+end_src
-
 Until [[https://github.com/kiwanami/emacs-calfw/pull/134][134]] gets merged, this fixes repeating entries in range periods.
 
 #+begin_src emacs-lisp :tangle yes
-    (defadvice! dan/cfw:org-get-timerange (text)
+(after! calfw
+  (defadvice! dan/cfw:org-get-timerange (text)
     "Return a range object (begin end text).
     If TEXT does not have a range, return nil."
     :override #'cfw:org-get-timerange
     (let* ((dotime (cfw:org-tp text 'dotime)))
-        (and (stringp dotime) (string-match org-ts-regexp dotime)
-            (let ((date-string  (match-string 1 dotime))
-                (extra (cfw:org-tp text 'extra)))
-            (if (string-match "(\\([0-9]+\\)/\\([0-9]+\\)): " extra)
-                (let* ((cur-day (string-to-number
-                                    (match-string 1 extra)))
+      (and (stringp dotime) (string-match org-ts-regexp dotime)
+           (let ((date-string  (match-string 1 dotime))
+                 (extra (cfw:org-tp text 'extra)))
+             (if (string-match "(\\([0-9]+\\)/\\([0-9]+\\)): " extra)
+                 (let* ((cur-day (string-to-number
+                                  (match-string 1 extra)))
                         (total-days (string-to-number
-                                    (match-string 2 extra)))
+                                     (match-string 2 extra)))
                         (start-date (org-read-date nil t date-string))
                         (end-date (time-add
-                                    start-date
-                                    (seconds-to-time (* 3600 24 (- total-days 1))))))
-                    (unless (= cur-day total-days)
-                    (list (calendar-gregorian-from-absolute (time-to-days start-date))
-                            (calendar-gregorian-from-absolute (time-to-days end-date)) text)))))))))
+                                   start-date
+                                   (seconds-to-time (* 3600 24 (- total-days 1))))))
+                   (unless (= cur-day total-days)
+                     (list (calendar-gregorian-from-absolute (time-to-days start-date))
+                           (calendar-gregorian-from-absolute (time-to-days end-date)) text)))))))))
 #+end_src
 
 Finally, we create an entrance point to the calendar view.
@@ -2990,12 +2981,6 @@ Modules for keeping track of habits and completing checklists.
     (org-module  '(org-habit org-checklist))
 #+end_src
 
-Show me scheduled TODOs in the next couple of days.
-
-#+begin_src emacs-lisp :tangle yes
-    (org-agenda-todo-ignore-scheduled 3)
-#+end_src
-
 A project with no NEXT subheads is stuck.
 
 #+begin_src emacs-lisp :tangle yes
@@ -3431,26 +3416,46 @@ The ~dan/org-super-agenda--transformer-show-scheduled-or-deadline~ shows an item
         item))))
 #+end_src
 
+Refresh the =soon= limit date on each ~org-super-agenda~ calling.
+
+#+begin_src emacs-lisp :tangle yes
+(after! org-super-agenda
+  (defun  dan/org-super-agenda--soon-limit ()
+    "Return the last ISO Date that is within the soon limit."
+    (org-read-date nil nil "+3d"))
+  (defadvice! dan/org-super-agenda--refresh-soon-limit (_)
+    :before #'org-super-agenda--group-items
+    (let ((group (cl-find-if (lambda (group)
+                               (string= (plist-get group :name) "Soon"))
+                             org-super-agenda-groups)))
+      (setf (cl-getf group :scheduled)
+            `(before ,(dan/org-super-agenda--soon-limit))))))
+#+end_src
+
 With the package installed, we are ready to define ~org-agenda-custom-commands~ as well as the ~org-super-agenda-groups~.
 
 #+begin_src emacs-lisp :tangle yes
 (after! org-super-agenda
-  (setq org-super-agenda-groups      '((:name "Started"
+  (setq org-super-agenda-groups      `((:name "Started"
                                         :transformer dan/org-super-agenda--transformer-show-scheduled-or-deadline
-                                        :and (:todo "NEXT" :not (:tag ("consume") :scheduled future)))
+                                        :and (:todo "NEXT"))
                                        (:name "Today"
                                         :transformer dan/org-super-agenda--transformer-show-scheduled-or-deadline
-                                        :scheduled today :scheduled past :pred dan/org-super-agenda--date-today)
+                                        :scheduled today
+                                        :scheduled past
+                                        :pred dan/org-super-agenda--date-today)
                                        (:name "Soon"
-                                        :scheduled future
+                                        :scheduled (before ,(dan/org-super-agenda--soon-limit))
                                         :transformer dan/org-super-agenda--transformer-show-scheduled-or-deadline)
                                        (:name "Incoming Events"
-                                        :and (:todo "EVENT"))
+                                        :todo "EVENT")
                                        (:name "Important"
                                         :transformer dan/org-super-agenda--transformer-show-scheduled-or-deadline
-                                        :and (:priority "A" :not (:todo "WAIT" :scheduled future)))
-                                       (:name "In Hold"
-                                        :and (:not (:tag ("consume")) :todo "WAIT"))
+                                        :and (:priority "A"
+                                              :not (:todo "WAIT"
+                                                    :scheduled future)))
+                                       (:name "On Hold"
+                                        :todo "WAIT")
                                        (:name "Active projects"
                                         :todo "PROJ"))))
 #+end_src
