--- a/config.org
+++ b/config.org
@@ -3541,8 +3541,8 @@ Some functionality uses this to identify you, e.g. GPG configuration, email
 clients, file templates and snippets.
 
 #+begin_src emacs-lisp :tangle yes
-(setq user-full-name    "Daniel Levy Moreno"
-      user-mail-address "daniellevymoreno@gmail.com")
+(setq user-full-name    "Daniel Levy"
+      user-mail-address "danielmorenolevy@gmail.com")
 #+end_src
 
 *** Proced
